--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link text-white" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">About Us</a>
+                <a class="nav-link text-white" href="pages/about_us.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#programs">Programs</a>
@@ -40,7 +40,7 @@
                 <a class="nav-link text-white" href="#">Testimonials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact Us</a>
+                <a class="nav-link text-white" href="pages/contact_us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -135,14 +135,16 @@
             <div class="card shadow p-3">
               <div class="row">
                 <div class="col-6 text-center">
+                  <h5>Before</h5>
                   <img src="assets/imgs/before2.png" class="img-fluid" alt="Client 1">
                 </div>
                 <div class="col-6 text-center">
+                  <h5>After</h5>
                   <img src="assets/imgs/after2.png" class="img-fluid" alt="Client 2">
                 </div>
               </div>
               <div class="card-body text-center">
-                <p class="card-text">"The group workouts are amazing! The trainers are so motivating, and I love the
+                <p class="card-text text-italic">"The group workouts are amazing! The trainers are so motivating, and I love the
                   energy in every session!"</p>
                 <h6 class="fw-bold">- Emily Smith</h6>
               </div>
