Included wireframe and color schema

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="nav-link text-white" href="#programs">Programs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Testimonials</a>
+                <a class="nav-link text-white" href="#testimonials">Testimonials</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="pages/contact_us.html">Contact Us</a>
