--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>FitLabs</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="shortcut icon" href="assets/imgs/fitlabs_logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-center gap-5">
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Home</a>
+                <a class="nav-link text-white active" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="pages/about_us.html">About Us</a>
@@ -63,7 +64,7 @@
           <h2 class="text-center text-primary mb-4 fw-bolder">Our Services & Programs</h2>
           <div class="row justify-content-center">
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-2">
               <div class="card shadow p-3 border-0">
                 <img src="assets/imgs/pushing-weighted-sledge.jpg" class="card-img-top" alt="Service 1">
                 <div class="card-body">
@@ -76,7 +77,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-2">
               <div class="card shadow p-3 border-0">
                 <img src="assets/imgs/Group-Exercie-at-GHYMCA-3.jpg" class="card-img-top" alt="Service 2">
                 <div class="card-body">
@@ -88,7 +89,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-2">
               <div class="card shadow p-3 border-0">
                 <img src="assets/imgs/nutritionist_1.jpg" class="card-img-top" alt="Service 3">
                 <div class="card-body">
@@ -106,7 +107,7 @@
       </div>
     </div>
 
-    <div class="row mb-4 px-5 bg-slate-200 shadow" id="testimonials">
+    <div class="row px-5 bg-slate-200 shadow" id="testimonials">
       <div class="container my-5">
         <h2 class="text-center text-primary mb-4 fw-bolder">Testimonials</h2>
         <div class="row">
@@ -144,7 +145,8 @@
                 </div>
               </div>
               <div class="card-body text-center">
-                <p class="card-text text-italic">"The group workouts are amazing! The trainers are so motivating, and I love the
+                <p class="card-text text-italic">"The group workouts are amazing! The trainers are so motivating, and I
+                  love the
                   energy in every session!"</p>
                 <h6 class="fw-bold">- Emily Smith</h6>
               </div>
@@ -153,6 +155,63 @@
         </div>
       </div>
 
+    </div>
+
+    <div class="row mb-4 shadow">
+      <div class="col-12">
+        <footer class="footer bg-dark text-white p-3">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-4 text-center text-md-start mb-3">
+                <h5>Follow Us</h5>
+                <div class="d-flex justify-content-center justify-content-md-start gap-3">
+                  <a href="https://facebook.com" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                  <a href="https://twitter.com" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="https://instagram.com" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="https://linkedin.com" target="_blank" class="text-white fs-4">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+
+              <!-- Quick Links Section -->
+              <div class="col-md-4 text-center mb-3">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled small"> 
+                  <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                  <li><a href="pages/about_us.html" class="text-white text-decoration-none">About Us</a></li>
+                  <li><a href="#programs" class="text-white text-decoration-none">Programs</a></li>
+                  <li><a href="#testimonials" class="text-white text-decoration-none">Testimonials</a></li>
+                  <li><a href="pages/contact_us.html" class="text-white text-decoration-none">Contact Us</a></li>
+                </ul>
+              </div>
+
+              <!-- Contact Info Section -->
+              <div class="col-md-4 text-center text-md-end mb-3">
+                <h5>Contact Info</h5>
+                <ul class="list-unstyled small"> 
+                  <li>Email: info@fitnesstrainer.com</li>
+                  <li>Phone: +123 456 7890</li>
+                  <li>Address: 123 Fitness St, Workout City</li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- Copyright Section -->
+            <div class="row mt-3">
+              <div class="col text-center">
+                <p class="m-0 small">&copy; 2025 Fitness Trainer. All Rights Reserved.</p>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
     </div>
 
   </div>
