--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -7,6 +7,7 @@
   <title>FitLabs - About Us</title>
   <link rel="stylesheet" href="../assets/css/main.css">
   <link rel="shortcut icon" href="../assets/imgs/fitlabs_logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
@@ -48,9 +49,9 @@
       </div>
     </div>
 
-    <div class="row p-4" id="mainContent">
+    <div class="row p-4">
       <div class="col-12 col-md-6">
-        <p>About Us</p>
+        
       </div>
     </div>
 
