Added About Us Page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container-fluid bg-light">
+  <div class="container-fluid bg-light py-2">
 
     <div class="row">
       <div class="col-12">
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="row p-4" id="mainContent">
+    <div class="row p-4" id="main-content">
       <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-start">
         <h1 class="text-light fw-bold fs-1 mb-4">Transform Your Body</h1>
         <p class="text-light mb-5">Take your fitness journey to the next level with personalized coaching, expert
@@ -58,14 +58,14 @@
       </div>
     </div>
 
-    <div class="row mb-2" id="programs">
+    <div class="row mb-2 shadow" id="programs">
       <div class="col-12">
         <div class="container py-5">
           <h2 class="text-center text-primary mb-4 fw-bolder">Our Services & Programs</h2>
           <div class="row justify-content-center">
 
             <div class="col-md-4 mb-2">
-              <div class="card shadow p-3 border-0">
+              <div class="card shadow p-3 border-0 rounded-3">
                 <img src="assets/imgs/pushing-weighted-sledge.jpg" class="card-img-top" alt="Service 1">
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-uppercase fs-5">Strength & Conditioning</h5>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="col-md-4 mb-2">
-              <div class="card shadow p-3 border-0">
+              <div class="card shadow p-3 border-0 rounded-3">
                 <img src="assets/imgs/Group-Exercie-at-GHYMCA-3.jpg" class="card-img-top" alt="Service 2">
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-uppercase fs-5">Group Workouts</h5>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="col-md-4 mb-2">
-              <div class="card shadow p-3 border-0">
+              <div class="card shadow p-3 border-0 rounded-3">
                 <img src="assets/imgs/nutritionist_1.jpg" class="card-img-top" alt="Service 3">
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-uppercase fs-5">Nutrition Coaching</h5>
@@ -107,12 +107,12 @@
       </div>
     </div>
 
-    <div class="row px-5 bg-slate-200 shadow" id="testimonials">
+    <div class="row px-5 mb-4" id="testimonials">
       <div class="container my-5">
         <h2 class="text-center text-primary mb-4 fw-bolder">Testimonials</h2>
         <div class="row">
           <div class="col-md-6">
-            <div class="card shadow-sm p-3 border-0">
+            <div class="card shadow p-3 border-0 rounded-1">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-6 text-center">
                   <h5>Before</h5>
@@ -124,16 +124,14 @@
                 </div>
               </div>
               <div class="card-body text-center">
-                <p class="card-text">"This program changed my life! I feel stronger, healthier, and more confident than
+                <p class="card-text fst-italic">"This program changed my life! I feel stronger, healthier, and more confident than
                   ever."</p>
                 <h6 class="fw-bold">- Alex Johnson</h6>
               </div>
             </div>
           </div>
-
-          <!-- Testimonials -->
           <div class="col-md-6">
-            <div class="card shadow p-3">
+            <div class="card shadow p-3 border-0 rounded-1">
               <div class="row">
                 <div class="col-6 text-center">
                   <h5>Before</h5>
@@ -145,7 +143,7 @@
                 </div>
               </div>
               <div class="card-body text-center">
-                <p class="card-text text-italic">"The group workouts are amazing! The trainers are so motivating, and I
+                <p class="card-text fst-italic">"The group workouts are amazing! The trainers are so motivating, and I
                   love the
                   energy in every session!"</p>
                 <h6 class="fw-bold">- Emily Smith</h6>
@@ -157,57 +155,55 @@
 
     </div>
 
-    <div class="row mb-4 shadow">
+    <div class="row mb-4">
       <div class="col-12">
-        <footer class="footer bg-dark text-white p-3">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-4 text-center text-md-start mb-3">
-                <h5>Follow Us</h5>
-                <div class="d-flex justify-content-center justify-content-md-start gap-3">
-                  <a href="https://facebook.com" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-facebook"></i>
-                  </a>
-                  <a href="https://twitter.com" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="https://instagram.com" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                  <a href="https://linkedin.com" target="_blank" class="text-white fs-4">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-
-              <!-- Quick Links Section -->
-              <div class="col-md-4 text-center mb-3">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled small"> 
-                  <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
-                  <li><a href="pages/about_us.html" class="text-white text-decoration-none">About Us</a></li>
-                  <li><a href="#programs" class="text-white text-decoration-none">Programs</a></li>
-                  <li><a href="#testimonials" class="text-white text-decoration-none">Testimonials</a></li>
-                  <li><a href="pages/contact_us.html" class="text-white text-decoration-none">Contact Us</a></li>
-                </ul>
-              </div>
-
-              <!-- Contact Info Section -->
-              <div class="col-md-4 text-center text-md-end mb-3">
-                <h5>Contact Info</h5>
-                <ul class="list-unstyled small"> 
-                  <li>Email: info@fitnesstrainer.com</li>
-                  <li>Phone: +123 456 7890</li>
-                  <li>Address: 123 Fitness St, Workout City</li>
-                </ul>
+        <footer class="footer bg-dark text-white p-5">
+          <div class="row">
+            <div class="col-md-4 text-center text-md-start mb-3">
+              <h5>Follow Us</h5>
+              <div class="d-flex justify-content-center justify-content-md-start gap-3">
+                <a href="https://facebook.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://twitter.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://instagram.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://linkedin.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </div>
             </div>
 
-            <!-- Copyright Section -->
-            <div class="row mt-3">
-              <div class="col text-center">
-                <p class="m-0 small">&copy; 2025 Fitness Trainer. All Rights Reserved.</p>
-              </div>
+            <!-- Quick Links Section -->
+            <div class="col-md-4 text-center mb-3">
+              <h5>Quick Links</h5>
+              <ul class="list-unstyled small">
+                <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                <li><a href="pages/about_us.html" class="text-white text-decoration-none">About Us</a></li>
+                <li><a href="#programs" class="text-white text-decoration-none">Programs</a></li>
+                <li><a href="#testimonials" class="text-white text-decoration-none">Testimonials</a></li>
+                <li><a href="pages/contact_us.html" class="text-white text-decoration-none">Contact Us</a></li>
+              </ul>
+            </div>
+
+            <!-- Contact Info Section -->
+            <div class="col-md-4 text-center text-md-end mb-3">
+              <h5>Contact Info</h5>
+              <ul class="list-unstyled small">
+                <li>Email: info@fitnesstrainer.com</li>
+                <li>Phone: +123 456 7890</li>
+                <li>Address: 123 Fitness St, Workout City</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Copyright Section -->
+          <div class="row mt-3">
+            <div class="col text-center">
+              <p class="m-0 small">&copy; 2025 FitLabs . All Rights Reserved.</p>
             </div>
           </div>
         </footer>
