--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container-fluid bg-light">
+  <div class="container-fluid bg-light py-2">
 
     <div class="row">
       <div class="col-12">
@@ -49,9 +49,35 @@
       </div>
     </div>
 
-    <div class="row p-4">
-      <div class="col-12 col-md-6">
-        
+    <div class="row mb-2 p-4" id="about-main-content">
+      <div class="col-12 col-md-6 text-light d-flex flex-column justify-content-center align-items-start">
+        <img src="../assets/imgs/male-boxer-posing-t-shirt-with-arms-crossed-removebg-preview.png" alt="">
+      </div>
+      <div class="col-12 col-md-6 text-light d-flex flex-column justify-content-center align-items-start">
+        <h2 class="text-primary fw-bold">WHO AM I?</h2>
+        <p class="lead">Hi, I’m <strong class="fw-bold">John Doe</strong>, the owner of <strong class="text-primary">FITLABS</strong> and a certified fitness coach with over 10 years of experience
+          helping clients transform their lives through personalized training and nutrition.</p>
+        <p>At my training facility, I combine strength training, conditioning, and customized nutrition plans to ensure
+          lasting results. I also believe in fostering a supportive community that keeps you motivated and accountable.
+        </p>
+        <p>If you're ready to take the first step toward a healthier, stronger version of yourself, let’s work together!
+        </p>
+        <a href="#contact" class="btn btn-primary btn-lg mt-3">Get in Touch</a>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-12 col-md-6 p-5 d-flex flex-column justify-content-start align-items-center shadow">
+        <h5 class="mb-4 text-center bg-dark text-white px-3 py-2 rounded-2">Mission</h5>
+        <blockquote class="text-justify fst-italic">
+          "At FitLabs, our mission is to empower individuals to achieve their fitness goals through personalized training, expert guidance, and a supportive community. We are committed to fostering a healthy and active lifestyle by providing science-backed fitness programs, nutritional coaching, and motivation to help you become the best version of yourself."
+        </blockquote>
+      </div>
+      <div class="col-12 col-md-6 p-5 d-flex flex-column justify-content-start align-items-center shadow">
+        <h5 class="mb-4 text-center bg-dark text-white px-3 py-2 rounded-2">Vision</h5>
+        <blockquote class="text-justify fst-italic">
+          "Our vision is to be the leading fitness coaching platform that transforms lives through sustainable health and wellness. We aim to create a fitness culture that inspires confidence, builds strength, and promotes long-term well-being for people of all backgrounds and fitness levels."
+        </blockquote>
       </div>
     </div>
 
