--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -81,6 +81,94 @@
       </div>
     </div>
 
+    <div class="row mb-2 shadow" id="programs">
+      <div class="col-12">
+        <div class="container py-5">
+          <h2 class="text-center text-primary mb-4 fw-bolder">Our Services & Programs</h2>
+          <div class="row justify-content-center">
+
+            <div class="col-md-4 mb-2">
+              <div class="card shadow p-3 border-0 rounded-3">
+                <img src="../assets/imgs/Black Gold Modern Certificate Of Achievement.png" class="card-img-top" alt="Service 1">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-uppercase fs-5 text-center">Certificate 1</h5>
+                  <p class="card-text fw-lighter text-center">This certificate is presented to John Doe in recognition of their exceptional performance and outstanding achievements in Fitness Training on April 31,2025. Your hard work, dedication, and perseverance have been instrumental in your success, and we are honored to recognize your accomplishments.
+                  </p>
+                 
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-2">
+              <div class="card shadow p-3 border-0 rounded-3">
+                <img src="../assets/imgs/Modern Vintage Certificate of Achievement (1).png" class="card-img-top" alt="Service 2">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold text-uppercase fs-5 text-center">Certificate 2</h5>
+                  <p class="card-text fw-lighter text-center">This certificate is presented to John Doe in recognition of their exceptional performance and outstanding achievements in Fitness Training on April 30,2025. Your hard work, dedication, and perseverance have been instrumental in your success, and we are honored to recognize your accomplishments.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row mb-4">
+      <div class="col-12">
+        <footer class="footer bg-dark text-white p-5">
+          <div class="row">
+            <div class="col-md-4 text-center text-md-start mb-3">
+              <h5>Follow Us</h5>
+              <div class="d-flex justify-content-center justify-content-md-start gap-3">
+                <a href="https://facebook.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://twitter.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://instagram.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://linkedin.com" target="_blank" class="text-white fs-4">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-- Quick Links Section -->
+            <div class="col-md-4 text-center mb-3">
+              <h5>Quick Links</h5>
+              <ul class="list-unstyled small">
+                <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+                <li><a href="pages/about_us.html" class="text-white text-decoration-none">About Us</a></li>
+                <li><a href="#programs" class="text-white text-decoration-none">Programs</a></li>
+                <li><a href="#testimonials" class="text-white text-decoration-none">Testimonials</a></li>
+                <li><a href="pages/contact_us.html" class="text-white text-decoration-none">Contact Us</a></li>
+              </ul>
+            </div>
+
+            <!-- Contact Info Section -->
+            <div class="col-md-4 text-center text-md-end mb-3">
+              <h5>Contact Info</h5>
+              <ul class="list-unstyled small">
+                <li>Email: info@fitnesstrainer.com</li>
+                <li>Phone: +123 456 7890</li>
+                <li>Address: 123 Fitness St, Workout City</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Copyright Section -->
+          <div class="row mt-3">
+            <div class="col text-center">
+              <p class="m-0 small">&copy; 2025 FitLabs . All Rights Reserved.</p>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
+
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
