Added philosophy section

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
       </div>
     </div>
 
-    <div class="row px-5 mb-4" id="testimonials">
+    <div class="row p-2 p-md-4 mb-4" id="testimonials">
       <div class="container my-5">
         <h2 class="text-center text-primary mb-4 fw-bolder">Testimonials</h2>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 mb-2">
             <div class="card shadow p-3 border-0 rounded-1">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-6 text-center">
@@ -130,7 +130,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 mb-2">
             <div class="card shadow p-3 border-0 rounded-1">
               <div class="row">
                 <div class="col-6 text-center">
@@ -159,7 +159,7 @@
       <div class="col-12">
         <footer class="footer bg-dark text-white p-5">
           <div class="row">
-            <div class="col-md-4 text-center text-md-start mb-3">
+            <div class="col-md-4 text-center text-md-start mb-4 mb-md-2">
               <h5>Follow Us</h5>
               <div class="d-flex justify-content-center justify-content-md-start gap-3">
                 <a href="https://facebook.com" target="_blank" class="text-white fs-4">
