--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -49,42 +49,48 @@
     </div>
 
     <div class="row p-4" id="contact-main-content">
-      <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-start">
-        <div class="row">
-          <!-- Contact Form -->
-          <div class="col-md-6 bg-light p-4 rounded">
-            <h5 class="text-center text-dark">Contact Form</h5>
-            <form>
-              <div class="row mb-3">
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="First Name">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="Last Name">
-                </div>
-              </div>
-              <div class="mb-3">
-                <input type="email" class="form-control" placeholder="Email">
-              </div>
-              <div class="mb-3">
-                <textarea class="form-control" rows="4" placeholder="Your Message"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Send</button>
-            </form>
-          </div>
-
-          <!-- Address and Map -->
-          <div class="col-md-6">
-            <div class="bg-light p-2 mb-3 rounded">
-              <h6 class="text-dark text-center">Address</h6>
+      <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+        <form class="bg-light p-4 rounded-3">
+          <h5 class="text-center text-dark mb-2">Contact Form</h5>
+          <div class="row mb-5">
+            <div class="col">
+              <input type="text" class="form-control form-control-lg" placeholder="First Name">
             </div>
-            <div class="bg-light p-2 mb-2 rounded"></div>
-            <div class="bg-light p-2 mb-2 rounded"></div>
-            <div class="bg-light p-2 mb-2 rounded"></div>
-            <div class="bg-light rounded text-center p-4" style="height: 200px;">
-              <span class="text-dark">Google Map Location</span>
+            <div class="col">
+              <input type="text" class="form-control form-control-lg" placeholder="Last Name">
             </div>
           </div>
+          <div class="mb-5">
+            <input type="email" class="form-control form-control-lg" placeholder="Email">
+          </div>
+          <div class="mb-5">
+            <textarea class="form-control form-control-lg" rows="4" placeholder="Your Message"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Send</button>
+        </form>
+      </div>
+      <!-- Address and Map -->
+      <div class="col-12 col-md-6 mt-6 d-flex flex-column justify-content-center align-items-start text-light">
+        <div class="p-2 mb-3 rounded">
+          <h2 class="text-center fw-bolder">Address</h2>
+        </div>
+        <div class="p-2 mb-2 rounded">
+          <p class="mb-0 fw-bold text-primary">Fitlabs Fitness Center</p>
+        </div>
+        <div class="p-2 mb-2 rounded">
+          <p class="mb-0">123 Lionheart Street, Cair Paravel, Narnia</p>
+        </div>
+        <div class="p-2 mb-2 rounded">
+          <p class="mb-0">Phone: 09851354590</p>
+        </div>
+        <div class="p-2 mb-2 rounded">
+          <p class="mb-0">Email: fitlabs.com</p>
+        </div>
+        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1743560906902!6m8!1m7!1sEgcCqZM92UVxBiyIBLULtw!2m2!1d10.9043303699151!2d123.0749763733654!3f121.93740023455209!4f5.126790399263854!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
