--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -50,12 +50,13 @@
     </div>
 
     <div class="row mb-2 p-4" id="about-main-content">
-      <div class="col-12 col-md-6 text-light d-flex flex-column justify-content-center align-items-start">
+      <div class="col-12 col-md-6 mb-3 text-light d-flex flex-column justify-content-center align-items-start">
         <img src="../assets/imgs/male-boxer-posing-t-shirt-with-arms-crossed-removebg-preview.png" alt="">
       </div>
       <div class="col-12 col-md-6 text-light d-flex flex-column justify-content-center align-items-start">
         <h2 class="text-primary fw-bold">WHO AM I?</h2>
-        <p class="lead">Hi, I’m <strong class="fw-bold">John Doe</strong>, the owner of <strong class="text-primary">FITLABS</strong> and a certified fitness coach with over 10 years of experience
+        <p class="lead">Hi, I’m <strong class="fw-bold">John Doe</strong>, the owner of <strong
+            class="text-primary">FITLABS</strong> and a certified fitness coach with over 10 years of experience
           helping clients transform their lives through personalized training and nutrition.</p>
         <p>At my training facility, I combine strength training, conditioning, and customized nutrition plans to ensure
           lasting results. I also believe in fostering a supportive community that keeps you motivated and accountable.
@@ -70,47 +71,81 @@
       <div class="col-12 col-md-6 p-5 d-flex flex-column justify-content-start align-items-center shadow">
         <h5 class="mb-4 text-center bg-dark text-white px-3 py-2 rounded-2">Mission</h5>
         <blockquote class="text-justify fst-italic">
-          "At FitLabs, our mission is to empower individuals to achieve their fitness goals through personalized training, expert guidance, and a supportive community. We are committed to fostering a healthy and active lifestyle by providing science-backed fitness programs, nutritional coaching, and motivation to help you become the best version of yourself."
+          "At FitLabs, our mission is to empower individuals to achieve their fitness goals through personalized
+          training, expert guidance, and a supportive community. We are committed to fostering a healthy and active
+          lifestyle by providing science-backed fitness programs, nutritional coaching, and motivation to help you
+          become the best version of yourself."
         </blockquote>
       </div>
       <div class="col-12 col-md-6 p-5 d-flex flex-column justify-content-start align-items-center shadow">
         <h5 class="mb-4 text-center bg-dark text-white px-3 py-2 rounded-2">Vision</h5>
         <blockquote class="text-justify fst-italic">
-          "Our vision is to be the leading fitness coaching platform that transforms lives through sustainable health and wellness. We aim to create a fitness culture that inspires confidence, builds strength, and promotes long-term well-being for people of all backgrounds and fitness levels."
+          "Our vision is to be the leading fitness coaching platform that transforms lives through sustainable health
+          and wellness. We aim to create a fitness culture that inspires confidence, builds strength, and promotes
+          long-term well-being for people of all backgrounds and fitness levels."
         </blockquote>
       </div>
     </div>
 
-    <div class="row mb-2 shadow" id="programs">
+    <div class="row mb-2 shadow" id="certifications">
       <div class="col-12">
         <div class="container py-5">
-          <h2 class="text-center text-primary mb-4 fw-bolder">Our Services & Programs</h2>
+          <h2 class="text-center text-primary mb-4 fw-bolder">Certifications</h2>
           <div class="row justify-content-center">
 
             <div class="col-md-4 mb-2">
               <div class="card shadow p-3 border-0 rounded-3">
-                <img src="../assets/imgs/Black Gold Modern Certificate Of Achievement.png" class="card-img-top" alt="Service 1">
+                <img src="../assets/imgs/Black Gold Modern Certificate Of Achievement.png" class="card-img-top"
+                  alt="Certificate 1">
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-uppercase fs-5 text-center">Certificate 1</h5>
-                  <p class="card-text fw-lighter text-center">This certificate is presented to John Doe in recognition of their exceptional performance and outstanding achievements in Fitness Training on April 31,2025. Your hard work, dedication, and perseverance have been instrumental in your success, and we are honored to recognize your accomplishments.
+                  <p class="card-text fw-lighter fs-6 text-center">
+                    I earned this certificate in recognition of my dedication and achievements.This milestone reflects
+                    my commitment and passion for helping others
+                    achieve their fitness goals.
                   </p>
-                 
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 mb-2">
               <div class="card shadow p-3 border-0 rounded-3">
-                <img src="../assets/imgs/Modern Vintage Certificate of Achievement (1).png" class="card-img-top" alt="Service 2">
+                <img src="../assets/imgs/Modern Vintage Certificate of Achievement (1).png" class="card-img-top"
+                  alt="Certificate 2">
                 <div class="card-body">
                   <h5 class="card-title fw-bold text-uppercase fs-5 text-center">Certificate 2</h5>
-                  <p class="card-text fw-lighter text-center">This certificate is presented to John Doe in recognition of their exceptional performance and outstanding achievements in Fitness Training on April 30,2025. Your hard work, dedication, and perseverance have been instrumental in your success, and we are honored to recognize your accomplishments.</p>
+                  <p class="card-text fw-lighter fs-6 text-center">
+                    This certificate represents my dedication to the fitness industry. On April 30, 2025, I was
+                    recognized for my expertise and commitment to training individuals to reach their full potential.
+                  </p>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
+      </div>
+    </div>
 
+    <div class="row mb-4">
+      <div class="col-12">
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-md-8">
+              <span class="badge bg-secondary">Philosophy</span>
+              <h2 class="mt-3">Our Fitness Philosophy</h2>
+              <p class="mt-3">
+                At our core, we believe that fitness is more than just exercise—it’s a lifestyle. Our approach focuses
+                on
+                balancing strength, endurance, and mental well-being to help individuals achieve sustainable results.
+              </p>
+              <p>
+                Whether you're a beginner or a seasoned athlete, we tailor fitness programs to meet your unique goals.
+                Every workout is designed with purpose, ensuring long-term health and success.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
