--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="row p-4" id="contact-main-content">
+    <div class="row mb-2 p-4" id="contact-main-content">
       <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
         <form class="bg-light p-4 rounded-3">
           <h5 class="text-center text-dark mb-2">Contact Form</h5>
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div class="row mb-4">
+    <div class="row mb-2">
       <div class="col-12">
         <footer class="footer bg-dark text-white p-5">
           <div class="row">
