Fixed responsive issue  on google map iframe

--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -83,13 +83,13 @@
         <div class="p-2 mb-2 rounded">
           <p class="mb-0">Phone: 09851354590</p>
         </div>
-        <div class="p-2 mb-2 rounded">
+        <div class="p-2 mb-4 rounded">
           <p class="mb-0">Email: fitlabs.com</p>
         </div>
-        <div>
+        <div class="ratio ratio-16x9">
           <iframe
             src="https://www.google.com/maps/embed?pb=!4v1743560906902!6m8!1m7!1sEgcCqZM92UVxBiyIBLULtw!2m2!1d10.9043303699151!2d123.0749763733654!3f121.93740023455209!4f5.126790399263854!5f0.7820865974627469"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
